Improve & port to kotlin
Bunch of changes fixing bugs and improving code.